reduced warnings